# msdf

./: .gitignore  README.md  config.toml  main.py  pyproject.toml  utils.py
centernet/: __init__.py
examples/: classification_cifar10.py  classification_imagenet.py  segmentation.py  vae.py
msdf/: centernet.py  trainer.py  voxelnet.py
msdf/backbones/: resnet.py  resnet_c.py  unet.py
notebooks/: CenterNet.ipynb  CenterPoint.ipynb  NuScenes.ipynb
tests/functional/: test_centernet.py  test_resnet.py  test_resnet_c.py
tests/integration/: test_resnet.py  test_resnet_c.py
