[project]
name = "msdf"
version = "0.1.0"
description = "Multi-Sensor Data Fusion for Object Detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.4",
    "jax[cuda12]>=0.5.1",
    "nuscenes-devkit==1.1.3",
    "xmltodict>=0.14.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
]
