[project]
name = "msdf"
version = "0.1.0"
description = "Multi-Sensor Data Fusion for Object Detection"
readme = "README.md"
requires-python = ">=3.11"
tool.uv.package = true

dependencies = [
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "jax-ai-stack>=2025.4.9",
    "jax[cuda12]>=0.5.3",
    "nuscenes-devkit==1.1.3",
    "polars>=1.28.1",
]

[dependency-groups]
datasets = [
    "xmltodict>=0.14.2",
    "datasets>=3.2.0",
    "tensorflow-datasets>=4.9.8",
    "torchvision>=0.22.0",
]
dev = [
    "pytest>=8.3.5",
]
# yolo = [
#     "gradio==4.31.5",
#     "huggingface-hub==0.23.2",
#     "onnx==1.14.0",
#     "onnxruntime==1.15.1",
#     "onnxruntime-gpu==1.18.0",
#     "onnxslim==0.1.31",
#     "opencv-python==4.9.0.80",
#     "psutil==5.9.8",
#     "py-cpuinfo==9.0.0",
#     "pycocotools==2.0.7",
#     "pyyaml==6.0.1",
#     "safetensors==0.4.3",
#     "scipy==1.13.0",
#     "torch==2.0.1",
#     "torchvision==0.15.2",
# ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["mmdet"]
